style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Dancing+Script&family=Great+Vibes&family=Poppins:wght@100&family=Shadows+Into+Light&display=swap');

body{
  font-family:'Fredoka One', cursive;
  font-family: 'Space Mono', monospace;
}
h3 {
  background-color: #d3d3d3;
  border-radius: 5px;
  text-align: center;
  width: 100%;
  font-size: 1.5rem;
}

.label,
.create,
.delete {
  width: 100%;
}





.jumbotron {
  padding: 16rem;
  /* padding-top: 18rem; */
  text-align: center;
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0.6) 100%
    ),
    url(images/daily-planner-thestreet.jpeg);
  background-attachment: static;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  
  color: white;
  border-radius: 0;
  margin-bottom: 50px ;

}
.btn_back{
  align-items: center;
  display: flex;
  justify-content: center;
}
.btn_back a{
    background-color: rgb(41, 102, 245);
    color: white;
    border: 1px solid black;
    border-radius: 10px;
    margin: 5px;
    padding: 4px;
    font-size: 1.5rem;
    text-decoration: none;
    
}

.btn_back a:hover{
    background-color: rgb(125, 182, 248);
    font-size: 25px;
    border: 2px solid white;
    color: black;
    transition: .2s;
    transform: scale(1.1);
    box-shadow: 0 0 15px #fff;
}

.darkmode{
  background-color: #080808;

}
.todos {
  border-top: 1px solid white;

}

.datePicker,
.timeBlock {
  border-radius: 5px;

}

footer{
  box-shadow: 2px 2px 13px black;
  border-radius: 15px;
  margin: 12px 10px;
}


.footer-content {
  border-radius: 15px;
  width: 100%;
}

.footer-content {
  background-color: rgb(32, 31, 31);
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

.footer-content  
.footer-heading{
  color: white;
  margin-top: 15px;
  font-size: 2rem;
  font-weight: 400;
  font-family: 'Shadows Into Light', cursive;
  margin-bottom: 0px;
  padding-bottom: 0px;
}

.footer-content 
.footer-paragraph {
  max-width: 500px;
  color: white;
  text-align: center;
  line-height: 20px;
  margin-top: 10px;
  font-size: 18px;
}

.media {
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;

}

.media li {
  margin: 0 10px;
}

.media a {
  text-decoration: none;
  color: white;
}

.media a i {
  font-size: 2rem;
}

.media a:hover {
  color: rgb(9, 158, 232);
}

.footer-bottom {
  text-align: center;
  margin: 10px 0px;
  color: white;
}

.footer-bottom span {
  color: rgb(9, 158, 232);
  font-family : 'Shadows Into Light', cursive;
  font-weight: 500;
}


#dayEarlier,
#dayPicked,
#dayLater {
  font-size: 2em;
  font-weight: bold;
  align-items: center;
  border-radius: 50px;
  box-shadow:5px 5px 7px black;

}

#dayEarlier:hover{
  background:orangered;
  box-shadow: 5px 5px 12px blue;
  inset: none;
}

#dayLater:hover{
  background: orangered;
  box-shadow: 5px 5px 12px blue;
}

#dayEarlier,
#dayLater {
  font-weight: bold;
}

.btn-primary{
  font-weight: bold;
  border-radius: 8px;
}




@media only screen and (min-width: 200px) and (max-width: 430px) {
  .display-3 {
    font-size: 3rem;
  }

  .lead {
    font-size: 1rem;
  }

  #dayEarlier,
  #dayPicked,
  #dayLater {
    font-size: 1.5rem;
  }
}
@media only screen and (min-width: 992px) and (max-width: 1200px) {
  h3{
    font-size: 1.25rem;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  h3{
    font-size: 1rem;
  }
  .hour{
    margin: 0;
  }
  .hourdiv{
    padding: 0;
  }
}

/* quote box css  + animation behind the picture*/
.row{
  display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 2rem;
}
.box{
  padding-right: 0;
  width: auto;
  font-family: 'Satisfy', cursive;
font-weight: 700;
}
#heading{
  font-size: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}
#div1{
  padding: 1rem;  
}
.darkmode #heading{
  color: #fff;
  font-weight: 300;
  }
  .darkmode #img{
   
  }

.darkmode .shadow-textarea textarea.form-control {
  color: #d3d3d3;
}
.darkmode .shadow-textarea textarea.form-control::placeholder {
  color: #d3d3d3;
}

.shadow-textarea textarea.form-control::placeholder {
  font-weight: 300;
  padding-right: 0;
  font-size: large;
  background: none;
  
  
}
.shadow-textarea textarea.form-control {
  background: none;
  
  
}
#exampleFormControlTextarea6{
  font-size: 2rem;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  
}
#img{
display: flex;
align-items: center;
justify-content: center;
width: 80%;
height: 35rem;
}

*{
    margin: 0px;
    padding: 0px;
}

.area{
    background: none;
    width: 100%;
    height:25rem;
    display: flex;
    align-items: center;
    justify-content: center;
    
   
}

.circles{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.circles li{
    position: absolute;
    display: block;
    list-style: none;
    width: 20px;
    height: 20px;
    background: rgba(255, 255, 255, 0.2);
    animation: animate 25s linear infinite;
    bottom: -150px;
    
}

.circles li:nth-child(1){
    left: 25%;
    width: 80px;
    height: 80px;
    animation-delay: 0s;
}


.circles li:nth-child(2){
    left: 10%;
    width: 20px;
    height: 20px;
    animation-delay: 2s;
    animation-duration: 12s;
}

.circles li:nth-child(3){
    left: 70%;
    width: 20px;
    height: 20px;
    animation-delay: 4s;
}

.circles li:nth-child(4){
    left: 40%;
    width: 60px;
    height: 60px;
    animation-delay: 0s;
    animation-duration: 18s;
}

.circles li:nth-child(5){
    left: 65%;
    width: 20px;
    height: 20px;
    animation-delay: 0s;
}

.circles li:nth-child(6){
    left: 75%;
    width: 110px;
    height: 110px;
    animation-delay: 3s;
}

.circles li:nth-child(7){
    left: 35%;
    width: 150px;
    height: 150px;
    animation-delay: 7s;
}

.circles li:nth-child(8){
    left: 50%;
    width: 25px;
    height: 25px;
    animation-delay: 15s;
    animation-duration: 45s;
}

.circles li:nth-child(9){
    left: 20%;
    width: 15px;
    height: 15px;
    animation-delay: 2s;
    animation-duration: 35s;
}

.circles li:nth-child(10){
    left: 85%;
    width: 150px;
    height: 150px;
    animation-delay: 0s;
    animation-duration: 11s;
}
body{
  font-family: 'Montserrat', sans-serif;
}

@keyframes animate {

    0%{
        transform: translateY(0) rotate(0deg);
        opacity: 1;
        border-radius: 0;
    }

    100%{
        transform: translateY(-1000px) rotate(720deg);
        opacity: 0;
        border-radius: 50%;
    }

}

